tests/analyzer/fail/duplicate-parameter.api
// expected: 1002

type any = fn(a: u32, a: u32) void;
